// Vitest Snapshot v1

exports[`Progress > Progress baseVue demo works fine 1`] = `
<div
  data-v-0843df2e=""
>
  <div
    class="progress-demo progress-demo--margin"
    data-v-0843df2e=""
  >
    <div
      class="t-progress t-progress--status--undefined"
      data-v-0843df2e=""
    >
      <div
        class="t-progress__inner"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__bar-percent"
            style="width: 0%;"
          />
        </div>
        <div
          class="t-progress__label"
        >
          0%
        </div>
      </div>
    </div>
  </div>
  <div
    class="progress-demo progress-demo--margin"
    data-v-0843df2e=""
  >
    <div
      class="t-progress t-progress--status--undefined"
      data-v-0843df2e=""
    >
      <div
        class="t-progress__inner"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__bar-percent"
            style="width: 88%;"
          />
        </div>
        <div
          class="t-progress__label"
        >
          88%
        </div>
      </div>
    </div>
  </div>
  <div
    class="progress-demo progress-demo--margin"
    data-v-0843df2e=""
  >
    <div
      class="t-progress t-progress--status--success"
      data-v-0843df2e=""
    >
      <div
        class="t-progress__inner"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__bar-percent"
            style="width: 100%;"
          />
        </div>
        <div
          class="t-progress__label"
        >
          100%
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress > Progress customVue demo works fine 1`] = `
<div
  class="progress-demo"
  data-v-e3f135ee=""
>
  <div
    class="t-progress t-progress--status--undefined"
    data-v-e3f135ee=""
  >
    <div
      class="t-progress__inner"
    >
      <div
        class="t-progress__bar"
        style="background-color: rgb(234, 201, 255);"
      >
        <div
          class="t-progress__bar-percent"
          style="width: 88%; background: rgb(205, 4, 255);"
        />
      </div>
      <div
        class="t-progress__label"
      >
        
        <span
          class="label--color"
          data-v-e3f135ee=""
        >
          88%
        </span>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress > Progress mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-6de369ba=""
>
  <h1
    class="title"
    data-v-6de369ba=""
  >
    Progress 进度条
  </h1>
  <p
    class="summary"
    data-v-6de369ba=""
  >
    用于展示任务当前的进度
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-6de369ba=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 类型
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      基础进度条
    </p>
    
    <div
      data-v-0843df2e=""
      data-v-6de369ba=""
    >
      <div
        class="progress-demo progress-demo--margin"
        data-v-0843df2e=""
      >
        <div
          class="t-progress t-progress--status--undefined"
          data-v-0843df2e=""
        >
          <div
            class="t-progress__inner"
          >
            <div
              class="t-progress__bar"
            >
              <div
                class="t-progress__bar-percent"
                style="width: 0%;"
              />
            </div>
            <div
              class="t-progress__label"
            >
              0%
            </div>
          </div>
        </div>
      </div>
      <div
        class="progress-demo progress-demo--margin"
        data-v-0843df2e=""
      >
        <div
          class="t-progress t-progress--status--undefined"
          data-v-0843df2e=""
        >
          <div
            class="t-progress__inner"
          >
            <div
              class="t-progress__bar"
            >
              <div
                class="t-progress__bar-percent"
                style="width: 88%;"
              />
            </div>
            <div
              class="t-progress__label"
            >
              88%
            </div>
          </div>
        </div>
      </div>
      <div
        class="progress-demo progress-demo--margin"
        data-v-0843df2e=""
      >
        <div
          class="t-progress t-progress--status--success"
          data-v-0843df2e=""
        >
          <div
            class="t-progress__inner"
          >
            <div
              class="t-progress__bar"
            >
              <div
                class="t-progress__bar-percent"
                style="width: 100%;"
              />
            </div>
            <div
              class="t-progress__label"
            >
              100%
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-6de369ba=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      隐藏数值进度条
    </p>
    
    <div
      class="progress-demo"
      data-v-14ddfcb4=""
      data-v-6de369ba=""
    >
      <div
        class="t-progress t-progress--status--undefined"
        data-v-14ddfcb4=""
      >
        <div
          class="t-progress__inner"
        >
          <div
            class="t-progress__bar"
          >
            <div
              class="t-progress__bar-percent"
              style="width: 88%;"
            />
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-6de369ba=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      自定义样式
    </p>
    
    <div
      class="progress-demo"
      data-v-6de369ba=""
      data-v-e3f135ee=""
    >
      <div
        class="t-progress t-progress--status--undefined"
        data-v-e3f135ee=""
      >
        <div
          class="t-progress__inner"
        >
          <div
            class="t-progress__bar"
            style="background-color: rgb(234, 201, 255);"
          >
            <div
              class="t-progress__bar-percent"
              style="width: 88%; background: rgb(205, 4, 255);"
            />
          </div>
          <div
            class="t-progress__label"
          >
            
            <span
              class="label--color"
              data-v-e3f135ee=""
            >
              88%
            </span>
            
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-6de369ba=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      自定义线宽
    </p>
    
    <div
      class="progress-demo"
      data-v-4cd01e86=""
      data-v-6de369ba=""
    >
      <div
        class="t-progress t-progress--status--undefined"
        data-v-4cd01e86=""
      >
        <div
          class="t-progress__inner"
        >
          <div
            class="t-progress__bar"
            style="height: 20px;"
          >
            <div
              class="t-progress__bar-percent"
              style="width: 88%;"
            />
          </div>
          <div
            class="t-progress__label"
          >
            88%
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-6de369ba=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      02 状态
    </h2>
    <!--v-if-->
    
    
    <div
      class="tdesign-mobile-demo-block"
      data-v-09d2fdec=""
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        默认状态
      </p>
      
      <div
        class="progress-demo"
        data-v-09d2fdec=""
      >
        <div
          class="t-progress t-progress--status--undefined"
          data-v-09d2fdec=""
        >
          <div
            class="t-progress__inner"
          >
            <div
              class="t-progress__bar"
            >
              <div
                class="t-progress__bar-percent"
                style="width: 88%;"
              />
            </div>
            <div
              class="t-progress__label"
            >
              88%
            </div>
          </div>
        </div>
      </div>
      
    </div>
    <div
      class="tdesign-mobile-demo-block"
      data-v-09d2fdec=""
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        错误状态
      </p>
      
      <div
        class="progress-demo"
        data-v-09d2fdec=""
      >
        <div
          class="t-progress t-progress--status--error"
          data-v-09d2fdec=""
        >
          <div
            class="t-progress__inner"
          >
            <div
              class="t-progress__bar"
            >
              <div
                class="t-progress__bar-percent"
                style="width: 88%;"
              />
            </div>
            <div
              class="t-progress__label"
            >
              88%
            </div>
          </div>
        </div>
      </div>
      
    </div>
    <div
      class="tdesign-mobile-demo-block"
      data-v-09d2fdec=""
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        警告状态
      </p>
      
      <div
        class="progress-demo"
        data-v-09d2fdec=""
      >
        <div
          class="t-progress t-progress--status--warning"
          data-v-09d2fdec=""
        >
          <div
            class="t-progress__inner"
          >
            <div
              class="t-progress__bar"
            >
              <div
                class="t-progress__bar-percent"
                style="width: 88%;"
              />
            </div>
            <div
              class="t-progress__label"
            >
              88%
            </div>
          </div>
        </div>
      </div>
      
    </div>
    <div
      class="tdesign-mobile-demo-block"
      data-v-09d2fdec=""
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        成功状态
      </p>
      
      <div
        class="progress-demo"
        data-v-09d2fdec=""
      >
        <div
          class="t-progress t-progress--status--success"
          data-v-09d2fdec=""
        >
          <div
            class="t-progress__inner"
          >
            <div
              class="t-progress__bar"
            >
              <div
                class="t-progress__bar-percent"
                style="width: 88%;"
              />
            </div>
            <div
              class="t-progress__label"
            >
              88%
            </div>
          </div>
        </div>
      </div>
      
    </div>
    <div
      class="tdesign-mobile-demo-block"
      data-v-09d2fdec=""
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        过渡样式
      </p>
      
      <div
        class="progress-demo"
        data-v-09d2fdec=""
      >
        <div
          class="t-progress t-progress--status--undefined"
          data-v-09d2fdec=""
        >
          <div
            class="t-progress__inner"
          >
            <div
              class="t-progress__bar"
            >
              <div
                class="t-progress__bar-percent"
                style="width: 88%;"
              />
            </div>
            <div
              class="t-progress__label"
            >
              88%
            </div>
          </div>
        </div>
        <div
          class="button-group"
          data-v-09d2fdec=""
        >
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--outline t-button--primary t-button--shape-rectangle"
            data-v-09d2fdec=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              减少
              
            </span>
          </button>
          <div
            class="space"
            data-v-09d2fdec=""
          />
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--primary t-button--shape-rectangle"
            data-v-09d2fdec=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              增加
              
            </span>
          </button>
        </div>
      </div>
      
    </div>
    
    
  </div>
</div>
`;

exports[`Progress > Progress noTextVue demo works fine 1`] = `
<div
  class="progress-demo"
  data-v-14ddfcb4=""
>
  <div
    class="t-progress t-progress--status--undefined"
    data-v-14ddfcb4=""
  >
    <div
      class="t-progress__inner"
    >
      <div
        class="t-progress__bar"
      >
        <div
          class="t-progress__bar-percent"
          style="width: 88%;"
        />
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Progress > Progress statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="tdesign-mobile-demo-block"
    data-v-09d2fdec=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      默认状态
    </p>
    
    <div
      class="progress-demo"
      data-v-09d2fdec=""
    >
      <div
        class="t-progress t-progress--status--undefined"
        data-v-09d2fdec=""
      >
        <div
          class="t-progress__inner"
        >
          <div
            class="t-progress__bar"
          >
            <div
              class="t-progress__bar-percent"
              style="width: 88%;"
            />
          </div>
          <div
            class="t-progress__label"
          >
            88%
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-09d2fdec=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      错误状态
    </p>
    
    <div
      class="progress-demo"
      data-v-09d2fdec=""
    >
      <div
        class="t-progress t-progress--status--error"
        data-v-09d2fdec=""
      >
        <div
          class="t-progress__inner"
        >
          <div
            class="t-progress__bar"
          >
            <div
              class="t-progress__bar-percent"
              style="width: 88%;"
            />
          </div>
          <div
            class="t-progress__label"
          >
            88%
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-09d2fdec=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      警告状态
    </p>
    
    <div
      class="progress-demo"
      data-v-09d2fdec=""
    >
      <div
        class="t-progress t-progress--status--warning"
        data-v-09d2fdec=""
      >
        <div
          class="t-progress__inner"
        >
          <div
            class="t-progress__bar"
          >
            <div
              class="t-progress__bar-percent"
              style="width: 88%;"
            />
          </div>
          <div
            class="t-progress__label"
          >
            88%
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-09d2fdec=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      成功状态
    </p>
    
    <div
      class="progress-demo"
      data-v-09d2fdec=""
    >
      <div
        class="t-progress t-progress--status--success"
        data-v-09d2fdec=""
      >
        <div
          class="t-progress__inner"
        >
          <div
            class="t-progress__bar"
          >
            <div
              class="t-progress__bar-percent"
              style="width: 88%;"
            />
          </div>
          <div
            class="t-progress__label"
          >
            88%
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-09d2fdec=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      过渡样式
    </p>
    
    <div
      class="progress-demo"
      data-v-09d2fdec=""
    >
      <div
        class="t-progress t-progress--status--undefined"
        data-v-09d2fdec=""
      >
        <div
          class="t-progress__inner"
        >
          <div
            class="t-progress__bar"
          >
            <div
              class="t-progress__bar-percent"
              style="width: 88%;"
            />
          </div>
          <div
            class="t-progress__label"
          >
            88%
          </div>
        </div>
      </div>
      <div
        class="button-group"
        data-v-09d2fdec=""
      >
        <button
          aria-disabled="false"
          class="t-button t-size-s t-button--outline t-button--primary t-button--shape-rectangle"
          data-v-09d2fdec=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            减少
            
          </span>
        </button>
        <div
          class="space"
          data-v-09d2fdec=""
        />
        <button
          aria-disabled="false"
          class="t-button t-size-s t-button--base t-button--primary t-button--shape-rectangle"
          data-v-09d2fdec=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            增加
            
          </span>
        </button>
      </div>
    </div>
    
  </div>
  
</div>
`;

exports[`Progress > Progress strokeWidthVue demo works fine 1`] = `
<div
  class="progress-demo"
  data-v-4cd01e86=""
>
  <div
    class="t-progress t-progress--status--undefined"
    data-v-4cd01e86=""
  >
    <div
      class="t-progress__inner"
    >
      <div
        class="t-progress__bar"
        style="height: 20px;"
      >
        <div
          class="t-progress__bar-percent"
          style="width: 88%;"
        />
      </div>
      <div
        class="t-progress__label"
      >
        88%
      </div>
    </div>
  </div>
</div>
`;
